@@ -37,8 +37,8 @@ public class PublisherController {
 
         var content = page.getContent()
                 .stream()
-                .map(publisher -> publisherService.convertEntityToDto(publisher))
-                .collect(Collectors.toList());
+                .map(publisherService::convertEntityToDto)
+                .toList();
 
         return new PageImpl<>(content, page.getPageable(), page.getTotalElements());
     }
@@ -47,7 +47,7 @@ public class PublisherController {
     @GetMapping("/find/{id}")
     public PublisherResponse findById(@PathVariable Long id) {
         log.info("Consultando a editora (ID = {})", id);
-        Publisher publisher = publisherService.findById(id);
+        var publisher = publisherService.findById(id);
         return publisherService.convertEntityToDto(publisher);
     }
 
@@ -56,7 +56,7 @@ public class PublisherController {
     @ResponseStatus(HttpStatus.CREATED)
     public PublisherResponse insertPublisher(@Valid @RequestBody PublisherRequest publisherRequest) {
         log.info("Cadastrando nova editora: {} ", publisherRequest.getName());
-        Publisher publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
+        var publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
         var publisher = publisherService.insertPublisher(publisherEntity);
         log.info("Editora cadastrada com sucesso (ID = {})", publisher.getId());
         return publisherService.convertEntityToDto(publisher);
@@ -67,7 +67,7 @@ public class PublisherController {
     @ResponseStatus(HttpStatus.OK)
     public PublisherResponse updatePublisher(@Valid @RequestBody PublisherRequest publisherRequest, @PathVariable Long id) {
         log.info("Atualizando a editora: {} ", id);
-        Publisher publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
+        var publisherEntity = publisherService.convertDtoToEntity(publisherRequest);
         var publisher = publisherService.updatePublisher(id, publisherEntity);
         log.info("Editora atualizada com sucesso (ID = {})", id);
         return publisherService.convertEntityToDto(publisher);
@@ -78,7 +78,7 @@ public class PublisherController {
     @ResponseStatus(HttpStatus.OK)
     public void deletePublisher(@PathVariable Long id) {
         log.info("Deletando editora (ID = {})", id);
-        publisherService.deletePublisher(id);
+        this.publisherService.deletePublisher(id);
         log.info("Editora deletada com sucesso (ID = {})", id);
     }
 }
